@@ -1,6 +1,8 @@
 Revision history for Perl extension Alien::wxWidgets.
 
 0.61  TBR
+    - change default debug level for wxWidgets >= 2.9 to 1 ( was 0)
+    - fix several incorrect wxWidgets version checks 
 
 0.60  Fri Aug 24 2012
     - allow building 2.9.4
